--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
         <title>BootStrap 5 Tutorial</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg"></nav>
+        <!-- Shorthand for nav -->
+        <!-- nav.navbar.navbar-expand-md.bg-dark.navbar-dark -->
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+            <div class="container">
+                <a href="#" class="navbar-brand">BS5</a>
+                <button class="navbar-toggler" type='button' data-bs-toggle="collapse" data-bs-target="#navmenu">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navmenu">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a href="#learn" class="nav-link">Learn</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#questions" class="nav-link">Question</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#instructors" class="nav-link">Instructors</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
