--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
         <!-- Shorthand for nav -->
         <!-- nav.navbar.navbar-expand-md.bg-dark.navbar-dark -->
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+            <!-- For divs just begin with .classname -->
+            <!-- i.e: .container -->
             <div class="container">
                 <a href="#" class="navbar-brand">BS5</a>
-                <button class="navbar-toggler" type='button' data-bs-toggle="collapse" data-bs-target="#navmenu">
+                <button class="navbar-toggler" type='button' data-bs-toggle="collapse" data-bs-target="#nav-menu">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navmenu">
+                <div class="collapse navbar-collapse" id="nav-menu">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
                             <a href="#learn" class="nav-link">Learn</a>
