--- a/index.html
+++ b/index.html
@@ -1,41 +1,60 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
-        <title>BootStrap 5 Tutorial</title>
-    </head>
-    <body>
-        <!-- Shorthand for nav -->
-        <!-- nav.navbar.navbar-expand-md.bg-dark.navbar-dark -->
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-            <!-- For divs just begin with .classname -->
-            <!-- i.e: .container -->
-            <div class="container">
-                <a href="#" class="navbar-brand">BS5</a>
-                <button class="navbar-toggler" type='button' data-bs-toggle="collapse" data-bs-target="#nav-menu">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="nav-menu">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a href="#learn" class="nav-link">Learn</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#questions" class="nav-link">Question</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#instructors" class="nav-link">Instructors</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        
+	<head>
+		<meta charset="UTF-8">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+		<link rel="stylesheet" href="style.css">
+		<title>BootStrap 5 Tutorial</title>
+	</head>
+	<body>
+		<!-- Navbar -->
+		<!-- Shorthand for nav -->
+		<!-- nav.navbar.navbar-expand-md.bg-dark.navbar-dark -->
+		<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+			<!-- For divs just begin with .classname -->
+			<!-- i.e: .container -->
+			<div class="container">
+				<a href="#" class="navbar-brand">BS5</a>
+				<button class="navbar-toggler" type='button' data-bs-toggle="collapse" data-bs-target="#nav-menu">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="nav-menu">
+					<ul class="navbar-nav ms-auto">
+						<li class="nav-item">
+							<a href="#learn" class="nav-link">Learn</a>
+						</li>
+						<li class="nav-item">
+							<a href="#questions" class="nav-link">Question</a>
+						</li>
+						<li class="nav-item">
+							<a href="#instructors" class="nav-link">Instructors</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<!-- Hero -->
+		<section class="bg-dark text-light p-5 text-center text-sm-start">
+			<div class="container">
+				<div class="d-sm-flex">
+					<div>
+						<h1>Become a <span class='text-warning'>Web Developer</span></h1>
+						<p class="lead my-4">
+							Some text about what we do here at BS5<br/>
+							Paddy's Pub, Home of the Original Kitten mitten <br/>
+							MEOW!
+						</p>
+						<button class="btn btn-primary btn-lg">Start Enrollment</button>
+					</div>
+					<img src="img/hero.svg" alt="" class="img-fluid w-50">
+				</div>
+			</div>
+		</section>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    </body>
-    <footer>
-    </footer>
+		
+
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+	</body>
+	<footer>
+	</footer>
 </html>
