--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<!-- Navbar -->
 		<!-- Shorthand for nav -->
 		<!-- nav.navbar.navbar-expand-md.bg-dark.navbar-dark -->
-		<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+		<nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
 			<!-- For divs just begin with .classname -->
 			<!-- i.e: .container -->
 			<div class="container">
@@ -33,20 +33,37 @@
 				</div>
 			</div>
 		</nav>
+
 		<!-- Hero -->
-		<section class="bg-dark text-light p-5 text-center text-sm-start">
+		<section class="bg-dark text-light p-5 pb-lg-0 text-center text-sm-start">
 			<div class="container">
-				<div class="d-sm-flex">
+				<div class="d-sm-flex align-items-center justify-content-between">
 					<div>
 						<h1>Become a <span class='text-warning'>Web Developer</span></h1>
 						<p class="lead my-4">
-							Some text about what we do here at BS5<br/>
-							Paddy's Pub, Home of the Original Kitten mitten <br/>
-							MEOW!
+							We focus on teaching our students the fundamentals of the latest
+							and greatest technologies to prepare them for their first dev role!
 						</p>
 						<button class="btn btn-primary btn-lg">Start Enrollment</button>
 					</div>
-					<img src="img/hero.svg" alt="" class="img-fluid w-50">
+					<img src="img/hero.svg" alt="" class="img-fluid w-50 d-none d-sm-block">
+				</div>
+			</div>
+		</section>
+
+		<!-- NewsLetter -->
+		<section class="bg-primary text-light p-5">
+			<div class="container">
+				<div class="d-md-flex justify-content-between align-items-center">
+					<h3 class="mb-3 mb-md-0">Sign Up For the NewsLetter</h3>
+					<div class="input-group news-input">
+						<input 
+							type="text"
+							class="form-control"
+							placeholder='Enter Email:'
+						/>
+						<button class="btn btn-dark btn-lg" type='button'>Button</button>
+					</div>
 				</div>
 			</div>
 		</section>
