--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 		<link rel="stylesheet" href="style.css">
 		<title>BootStrap 5 Tutorial</title>
 	</head>
@@ -68,7 +69,91 @@
 			</div>
 		</section>
 
-		
+		<!-- Boxes -->
+		<section class="p-5">
+			<div class="container">
+				<div class="row text-center g-4">
+					<div class="col-md">
+						<div class="card bg-dark text-light">
+							<div class="h1 mb-3">
+								<i class="bi bi-laptop"></i>
+							</div>
+							<h3 class="card-title mb-3">Virtual</h3>
+							<p class="card-text">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, commodi assumenda nihil pariatur ipsam exercitationem!
+							</p>
+							<a href="#" class="btn btn-primary">Read More</a>
+						</div>
+					</div>
+					<div class="col-md">
+						<div class="card bg-secondary text-light">
+							<div class="h1 mb-3">
+								<i class="bi bi-person-square"></i>
+							</div>
+							<h3 class="card-title mb-3">Hybrid</h3>
+							<p class="card-text">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, commodi assumenda nihil pariatur ipsam exercitationem!
+							</p>
+							<a href="#" class="btn btn-dark">Read More</a>
+						</div>
+					</div>
+					<div class="col-md">
+						<div class="card bg-dark text-light">
+							<div class="h1 mb-3">
+								<i class="bi bi-people"></i>
+							</div>
+							<h3 class="card-title mb-3">In-Person</h3>
+							<p class="card-text">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, commodi assumenda nihil pariatur ipsam exercitationem!
+							</p>
+							<a href="#" class="btn btn-primary">Read More</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Learn -->
+		<section id='learn' class="p-5">
+			<div class="container">
+				<div class="row align-items-center justify-content-between">
+					<div class="col-md">
+						<img src="img/fundamentals.svg" alt="" class="img-fluid">
+					</div>
+					<div class="col-md p-5">
+						<h2>Learn The Fundamentals</h2>
+						<p class="lead">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, mollitia. Nam consequatur earum voluptatem iste.
+						</p>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt optio esse amet. Sapiente est dolor quis, suscipit neque rerum? Id eum enim ducimus illo non eius expedita quos explicabo?
+						</p>
+						<a href="#" class="btn btn-light mt-3"><i class="bi bi-chevron-right"></i>Read More</a>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Learn -->
+		<section id='learn' class="p-5 bg-dark text-light">
+			<div class="container">
+				<div class="row align-items-center justify-content-between">
+					<div class="col-md p-5">
+						<h2>Learn React</h2>
+						<p class="lead">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, mollitia. Nam consequatur earum voluptatem iste.
+						</p>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt optio esse amet. Sapiente est dolor quis, suscipit neque rerum? Id eum enim ducimus illo non eius expedita quos explicabo?
+						</p>
+						<a href="#" class="btn btn-light mt-3"><i class="bi bi-chevron-right"></i>Read More</a>
+					</div>
+					<div class="col-md">
+						<img src="img/react.svg" alt="" class="img-fluid">
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	</body>
