--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!-- Navbar -->
 		<!-- Shorthand for nav -->
 		<!-- nav.navbar.navbar-expand-md.bg-dark.navbar-dark -->
-		<nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+		<nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
 			<!-- For divs just begin with .classname -->
 			<!-- i.e: .container -->
 			<div class="container">
@@ -25,7 +25,7 @@
 							<a href="#learn" class="nav-link">Learn</a>
 						</li>
 						<li class="nav-item">
-							<a href="#questions" class="nav-link">Question</a>
+							<a href="#questions" class="nav-link">Questions</a>
 						</li>
 						<li class="nav-item">
 							<a href="#instructors" class="nav-link">Instructors</a>
@@ -133,8 +133,6 @@
 				</div>
 			</div>
 		</section>
-
-		<!-- Learn -->
 		<section id='learn' class="p-5 bg-dark text-light">
 			<div class="container">
 				<div class="row align-items-center justify-content-between">
@@ -153,6 +151,11 @@
 					</div>
 				</div>
 			</div>
+		</section>
+
+		<!-- Questions -->
+		<section class="p-5" id='questions'>
+			<div class="container"></div>
 		</section>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
