--- a/index.html
+++ b/index.html
@@ -155,7 +155,56 @@
 
 		<!-- Questions -->
 		<section class="p-5" id='questions'>
-			<div class="container"></div>
+			<div class="container">
+				<h2 class="text-center mb-4">Frequently Asked Questions</h2>
+				<div class="accordion accordion-flush" id='questions'>
+					<!-- Item 1 -->
+					<div class="accordion-item">
+						<h2 class="accordion-header">
+							<button class="accordion-button collapsed" type='button' data-bs-toggle='collapse' data-bs-target="#question-1">
+								Where are you located?
+							</button>
+						</h2>
+						<div class="accordion-collapse collapse" id='question-1'>
+							<div class="accordion-body">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim dicta ipsum aliquid omnis blanditiis corrupti ab placeat voluptatem deserunt harum neque, cum tenetur, deleniti at nemo? Sequi voluptatibus dolores corporis vel. Et doloribus incidunt aliquam neque ex deserunt, sunt quasi ab nesciunt excepturi cupiditate impedit commodi omnis in eaque ducimus!</div>
+						</div>
+					</div>
+					<!-- Item 2 -->
+					<div class="accordion-item">
+						<h2 class="accordion-header">
+							<button class="accordion-button collapsed" data-bs-toggle='collapse' data-bs-target="#question-2">
+								How much does this course cost?
+							</button>
+						</h2>
+						<div class="accordion-collapse collapse" id='question-2'>
+							<div class="accordion-body">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim dicta ipsum aliquid omnis blanditiis corrupti ab placeat voluptatem deserunt harum neque, cum tenetur, deleniti at nemo? Sequi voluptatibus dolores corporis vel. Et doloribus incidunt aliquam neque ex deserunt, sunt quasi ab nesciunt excepturi cupiditate impedit commodi omnis in eaque ducimus!</div>
+						</div>
+					</div>
+					<!-- Item 3 -->
+					<div class="accordion-item">
+						<h2 class="accordion-header">
+							<button class="accordion-button collapsed" data-bs-toggle='collapse' data-bs-target="#collapse-3">
+								What do I need to know before staring the course?
+							</button>
+						</h2>
+						<div class="accordion-collapse collapse" id='collapse-3'>
+							<div class="accordion-body">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim dicta ipsum aliquid omnis blanditiis corrupti ab placeat voluptatem deserunt harum neque, cum tenetur, deleniti at nemo? Sequi voluptatibus dolores corporis vel. Et doloribus incidunt aliquam neque ex deserunt, sunt quasi ab nesciunt excepturi cupiditate impedit commodi omnis in eaque ducimus!</div>
+						</div>
+					</div>
+					<!-- Item 4 -->
+					<div class="accordion-item">
+						<h2 class="accordion-header">
+							<button class="accordion-button collapsed" data-bs-toggle='collapse' data-bs-target="#collapse-4">
+								How do I sign up?
+							</button>
+						</h2>
+						<div class="accordion-collapse collapse" id='collapse-4'>
+							<div class="accordion-body">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim dicta ipsum aliquid omnis blanditiis corrupti ab placeat voluptatem deserunt harum neque, cum tenetur, deleniti at nemo? Sequi voluptatibus dolores corporis vel. Et doloribus incidunt aliquam neque ex deserunt, sunt quasi ab nesciunt excepturi cupiditate impedit commodi omnis in eaque ducimus!</div>
+						</div>
+					</div>
+			
+				</div>
+			</div>
 		</section>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
