--- a/index.html
+++ b/index.html
@@ -45,12 +45,45 @@
 							We focus on teaching our students the fundamentals of the latest
 							and greatest technologies to prepare them for their first dev role!
 						</p>
-						<button class="btn btn-primary btn-lg">Start Enrollment</button>
+						<button data-bs-toggle='modal' data-bs-target='#enroll' class="btn btn-primary btn-lg">Start Enrollment</button>
 					</div>
 					<img src="img/hero.svg" alt="" class="img-fluid w-50 d-none d-sm-block">
 				</div>
 			</div>
 		</section>
+
+		<!-- Modal -->
+		<div class="modal fade" id="enroll" aria-hidden='true' aria-labelledby="enroll-label">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" aria-label='enroll-label'>Modal Title</h5>
+						<button class="btn-close" data-bs-dismiss='modal' aria-label='Close'></button>
+					</div>
+					<div class="modal-body">
+						<p class="lead">Fill Out This Form To Begin the Enrollment Process</p>
+						<form action="">
+							<div class="mb-3">
+								<label for="" class="col-form-label">First Name:</label>
+								<input type="text" class="form-control" id="first-name">
+							</div>
+							<div class="mb-3">
+								<label for="" class="col-form-label">Last Name:</label>
+								<input type="text" class="form-control" id="last-name">
+							</div>
+							<div class="mb-3">
+								<label for="" class="col-form-label">Email:</label>
+								<input type="text" class="form-control" id="email">
+							</div>
+						</form>
+					</div>
+					<div class="modal-footer">
+						<button class="btn btn-secondary" data-bs-dismiss='modal'>Close</button>
+						<button class="btn btn-primary">Submit</button>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<!-- NewsLetter -->
 		<section class="bg-primary text-light p-5">
@@ -210,7 +243,7 @@
 		<!-- Instructors -->
 
 		<section id="instructors" class="bg-primary">
-			<div class="container">
+			<div class="container p-5">
 				<h2 class="text-center text-white">Our Instructors</h2>
 				<p class="lead text-center text-white mb-5">
 					Our Instructors all have 5+ years of experience working as
@@ -269,8 +302,32 @@
 			</div>
 		</section>
 
+		<!-- Contact -->
+		<section class="p-5">
+			<div class="container">
+				<div class="row g-4">
+					<div class="col-md">
+						<h2 class="text-center mb-4">Contact Info</h2>
+						<ul class="list-group list-group-flush lead">
+							<li class="list-group-item"><span class="fw-bold">Main Location:</span> 15 Springtime Lane, Long Island, NY</li>
+							<li class="list-group-item"><span class="fw-bold">Phone:</span> 555-555-5555</li>
+							<li class="list-group-item"><span class="fw-bold">Email:</span> fakeemail@fake.com</li>
+						</ul>
+					</div>
+					<div class="col md">
+						<div id="map">
+							<span class='p-5 text-center'>Map Would Go Here</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<footer class='p-5 bg-dark text-white text-center position-relative'>
+			<div class="container">
+				<p class="lead">Copyright &copy 2021 Bootstrap5</p>
+				<a href="#" class="position-absolute bottom-0 end-0 p-5"><i class="bi bi-arrow-up-circle h1"></i></a>
+		</footer>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	</body>
-	<footer>
-	</footer>
 </html>
